# TUI-K6-Runner

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  app.py  app_bootstrap.py  config_handler.py  constants.py  k6_logic.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-lock-tools.txt  requirements.in  requirements.txt  resources.py  style.tcss  test.js  test_config.json  ui_components.py
.github/workflows/: ci.yml  coverage.yml  lint.yml  security.yml  tests.yml
app_mixins/: events_mixin.py  request_mixin.py  stage_mixin.py  ui_mixin.py
application/: __init__.py  run_controller.py
k6/: __init__.py  html_summary_report.py  metrics.py  output_parser.py  presenters.py  process_manager.py  service.py  state.py
k6/backends/: __init__.py  base.py  capabilities.py  embedded.py  external_terminal.py  factory.py
schema/: test_config.schema.json
scripts/: update-dependencies.sh
tests/: test_app_bootstrap.py  test_app_load_config.py  test_config_handler.py  test_embedded_backend.py  test_events_mixin.py  test_html_summary_report.py  test_k6_service.py  test_main.py  test_metrics.py  test_output_parser.py  test_presenters_state.py  test_process_manager.py  test_request_mixin.py  test_run_controller.py  test_service_metrics_stream.py  test_stage_mixin.py  test_textual_app_integration.py  test_ui_components_extra.py  test_ui_mixin.py
