[project]
name = "tui-k6-runner"
version = "0.0.0"
requires-python = "==3.11.*"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  "dist",
  "artifacts",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
